// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`atMost '' conditional success tests AST to match snapshot 1`] = `[]`;

exports[`atMost 'a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
]
`;

exports[`atMost 'aa' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`atMost 'aaa' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`atMost 'abaa' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
